--- a/views/producto/listaDiners.twig
+++ b/views/producto/listaDiners.twig
@@ -3,6 +3,8 @@
 		<tr>
 			<td style="background-color: #87CEFA; width: 20px; color: white; border: 1px solid white;"></td>
 			<td style="padding-right: 20px;">No Asignado</td>
+			<td style="background-color: #CCFFCC; width: 20px; color: white; border: 1px solid white;"></td>
+			<td style="padding-right: 20px;">Asignado Megacob</td>
 			<td style="background-color: #FFFFCC; width: 20px; color: white; border: 1px solid white;"></td>
 			<td style="padding-right: 20px;">Asignado Usuario</td>
 			<td style="background-color: #F8F8F8; width: 20px; color: white; border: 1px solid white;"></td>
@@ -13,55 +15,28 @@
 		<thead>
 		<tr>
 			<th style="width: 90px;"></th>
-			<th>Institución</th>
 			<th>Cliente</th>
 			<th>Producto</th>
 			<th>Estado</th>
 			<th>Asignado</th>
 			<th>Último seguimiento</th>
-			<th>Mejor seguimiento</th>
 		</tr>
 		</thead>
 		<tbody>
 		{% for l in lista %}
 			<tr {% if l.estado == 'asignado_megacob' %} style="background-color: #CCFFCC;" {% elseif l.estado == 'asignado_usuario' %} style="background-color: #FFFFCC;" {% elseif l.estado == 'procesado' %} style="background-color: #F8F8F8;" {% elseif l.estado == 'no_asignado' %} style="background-color: #87CEFA;" {% endif %}>
 				<td>
-					<a href="{{ root }}/producto/editar?id={{ l.id }}" target="_self" class="btn btn-icon btn-info" title="Ingresar Seguimiento">
+					<a href="{{ root }}/producto/editarDiners?id={{ l.id }}" target="_self" class="btn btn-icon btn-info" title="Ingresar Seguimiento">
 						<i class="fa fa-plus"></i>
 					</a>
-					<a href="{{ root }}/producto/verSeguimientos?id={{ l.id }}" target="_self" class="btn btn-icon btn-success" title="Ver Seguimiento">
+					<a href="{{ root }}/producto/verSeguimientosDiners?id={{ l.id }}" target="_self" class="btn btn-icon btn-success" title="Ver Seguimiento">
 						<i class="fa fa-eye"></i>
 					</a>
 				</td>
-				<td>{{ l.institucion_nombre }}</td>
 				<td>{{ l.cliente_nombres }}</td>
 				<td>{{ l.producto }} </td>
 				<td>{{ l.estado|upper }} </td>
 				<td>{{ l.apellidos_usuario_asignado }}&nbsp;{{ l.nombres_usuario_asignado }}</td>
-				<td style="font-size: 11px;">
-					{% if l.ultimo_seguimiento.fecha_ingreso != '' %}
-						<strong>Fecha de seguimiento: </strong><br/>{{ l.ultimo_seguimiento.fecha_ingreso }}<br/>
-						{% if l.ultimo_seguimiento.nivel1 != '' %}
-							<strong>{{ l.ultimo_seguimiento.nivel1_titulo }}: </strong><br/>{{ l.ultimo_seguimiento.nivel1 }}<br/>
-						{% endif %}
-						{% if l.ultimo_seguimiento.nivel2 != '' %}
-							<strong>{{ l.ultimo_seguimiento.nivel2_titulo }}: </strong><br/>{{ l.ultimo_seguimiento.nivel2 }}<br/>
-						{% endif %}
-						{% if l.ultimo_seguimiento.nivel3 != '' %}
-							<strong>{{ l.ultimo_seguimiento.nivel3_titulo }}: </strong><br/>{{ l.ultimo_seguimiento.nivel3 }}<br/>
-						{% endif %}
-						{% if l.ultimo_seguimiento.nivel4 != '' %}
-							<strong>{{ l.ultimo_seguimiento.nivel4_titulo }}: </strong><br/>{{ l.ultimo_seguimiento.nivel4 }}<br/>
-						{% endif %}
-						{% if l.ultimo_seguimiento.nivel1_motivo_no_pago != '' %}
-							<strong>Motivo No Pago: </strong><br/>{{ l.ultimo_seguimiento.nivel1_motivo_no_pago }}<br/>
-						{% endif %}
-						{% if l.ultimo_seguimiento.nivel2_motivo_no_pago != '' %}
-							<strong>Descripción: </strong><br/>{{ l.ultimo_seguimiento.nivel2_motivo_no_pago }}<br/>
-						{% endif %}
-						<strong>Usuario: </strong><br/>{{ l.ultimo_seguimiento.usuario }}
-					{% endif %}
-				</td>
 				<td style="font-size: 11px;">
 					{% if l.ultimo_seguimiento.fecha_ingreso != '' %}
 						<strong>Fecha de seguimiento: </strong><br/>{{ l.ultimo_seguimiento.fecha_ingreso }}<br/>
