--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -258,7 +258,7 @@
 					{% endif %}
 					<label for="inputName" class="col-md-2 form-label">{{ pc.campo }}</label>
 					<div class="col-md-4 col-informacion">
-						{{ pc.valor }}
+						<span class="form-control-plaintext">{{ pc.valor }}</span>
 					</div>
 					{% if((key % 2) == 1) %}
 						</div>
